2024-01-20T00:31:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7590808680 # 39
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 4 18
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 315 660
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 315 661
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-19]

2024-01-19T08:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7581096303 # 37
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
* notice: last 14d: unq all: 4 17
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 314 659
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 315 660
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-19]

2024-01-19T00:32:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7577746761 # 36
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
* notice: last 14d: unq all: 4 16
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 313 657
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 314 659
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-01-18]

2024-01-18T08:08:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7567053832 # 34