@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-20T00:31:41Z",
+  "timestamp" : "2024-01-20T08:07:58Z",
   "count_outdated" : 643,
   "uniques_outdated" : 303,
-  "count" : 661,
-  "uniques" : 315,
+  "count" : 662,
+  "uniques" : 316,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
