@@ -1,3 +1,12 @@
+2024-01-20T08:07:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7593147727 # 40
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
+* notice: last 14d: unq all: 4 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 315 661
+* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 316 662
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-20]
+
 2024-01-20T00:31:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7590808680 # 39
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
